--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "socket.io-client": "^4.8.1",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
