--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
+    "simple-peer": "^9.11.1",
     "socket.io-client": "^4.8.1",
     "zustand": "^5.0.5"
   },
