--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^7.6.2",
     "simple-peer": "^9.11.1",
     "socket.io-client": "^4.8.1",
+    "uuid": "^11.1.0",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
